force-app/main/default/objects/SSP_Office__c/SSP_Office__c.object-meta.xml
<CustomObject>
    <description>MOR set for offices for day 0 data for SSP</description>
    <label>SSP Office</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SSP Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSP Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>