force-app/main/default/objects/SSP_Office__c/fields/Calculated_Distance__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Distance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calculated Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>