force-app/main/default/objects/SSP_Office__c/fields/DCMailingAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCMailingAddressId__c</fullName>
    <description>AddressId from ManagedOfficeAddressAssociation table.</description>
    <externalId>true</externalId>
    <label>DC Mailing AddressId</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>