force-app/main/default/objects/SSP_Office__c/fields/DCOfficeId__c.field-meta.xml
<CustomField>
    <fullName>DCOfficeId__c</fullName>
    <description>OfficeId from Office table.</description>
    <externalId>true</externalId>
    <label>DC OfficeId</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>