force-app/main/default/objects/SSP_Office__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>geolocation of office for physical address</description>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>