force-app/main/default/objects/SSP_Office__c/fields/Mailing_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Geolocation__c</fullName>
    <description>Geolocation for mailing address</description>
    <label>Mailing Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>