force-app/main/default/objects/SSP_Office__c/fields/MailingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressLine1__c</fullName>
    <description>Office Address Line1.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing AddressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>