force-app/main/default/objects/SSP_Office__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <description>Office Address City.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>