force-app/main/default/objects/SSP_Office__c/fields/MailingZipCode4__c.field-meta.xml
<CustomField>
    <fullName>MailingZipCode4__c</fullName>
    <description>Office Address ZIpCode4.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing ZipCode4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>