force-app/main/default/objects/SSP_Office__c/fields/OfficeHoursFrom__c.field-meta.xml
<CustomField>
    <fullName>OfficeHoursFrom__c</fullName>
    <description>Office start time.</description>
    <label>OfficeHoursFrom</label>
    <type>Time</type>
</CustomField>