force-app/main/default/objects/SSP_Office__c/fields/OfficeHoursFromText__c.field-meta.xml
<CustomField>
    <fullName>OfficeHoursFromText__c</fullName>
    <description>text value for OfficeHoursFrom</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OfficeHoursFromText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>