force-app/main/default/objects/SSP_Office__c/fields/OfficeHoursTo__c.field-meta.xml
<CustomField>
    <fullName>OfficeHoursTo__c</fullName>
    <description>Office end time.</description>
    <label>OfficeHoursTo</label>
    <type>Time</type>
</CustomField>