force-app/main/default/objects/SSP_Office__c/fields/OfficeHoursToText__c.field-meta.xml
<CustomField>
    <fullName>OfficeHoursToText__c</fullName>
    <description>text field for OfficeHoursTo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OfficeHoursToText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>