force-app/main/default/objects/SSP_Office__c/fields/OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>OfficePhone__c</fullName>
    <description>Office phone number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>