force-app/main/default/objects/SSP_Office__c/fields/OfficePhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>OfficePhoneExtension__c</fullName>
    <description>Office phone extension.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>