force-app/main/default/objects/SSP_Office__c/fields/PhysicalAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddressLine2__c</fullName>
    <description>Office Address Line2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>