force-app/main/default/objects/SSP_Office__c/fields/PhysicalCity__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCity__c</fullName>
    <description>Office Address City.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>