force-app/main/default/objects/SSP_Office__c/fields/PhysicalCountyCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCountyCode__c</fullName>
    <description>Office Address CountyCode. Use RT &apos;COUNTY&apos; for getting equivalent text value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical County Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>