force-app/main/default/objects/SSP_Office__c/fields/PhysicalStateCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalStateCode__c</fullName>
    <description>Office Address StateCode. Use RT &apos;STATE&apos; for getting equivalent text value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical StateCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>