force-app/main/default/objects/SSP_Office__c/fields/PhysicalZipCode5__c.field-meta.xml
<CustomField>
    <fullName>PhysicalZipCode5__c</fullName>
    <description>Office Address Zipcode5.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical ZipCode5</label>
    <length>15</length>
    <type>Text</type>
</CustomField>