force-app/main/default/objects/SSP_Office__c/fields/TimezoneCode__c.field-meta.xml
<CustomField>
    <fullName>TimezoneCode__c</fullName>
    <description>Office time zone.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TimezoneCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>